fix undeline issue on iphone

--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ body{
 
     -webkit-text-decoration: underline solid #00B4FF;
     -webkit-text-decoration-color: #00B4FF;
-    text-underline-offset: 8px;
+    text-underline-offset: 7px;
     height: 28px;
 }
 
